--- a/css/style.css
+++ b/css/style.css
@@ -64,15 +64,16 @@ body{
             margin-left: 10px;
             font-weight: bold;
         }
-        #icone{
+        .icone_nav{
             display: flex;
             align-items: center;
             height: 100%;
         }
         .icone{
-            color: grey;
+            color: rgb(173, 171, 171);
             margin: 0 10px;
             cursor: pointer;
+            font-size: 20px;
         }
 
     /* notifiche  */
@@ -169,19 +170,33 @@ body{
         width: 100%;
         height: 10%;
         background-color: rgb(223, 223, 223);;
+        display: flex;
+        padding-left: 20px;
+        align-items: center;
+        justify-content: space-between;
+    }
+        #ultimo_accesso{
+            color: rgba(0, 0, 0, 0.589);
+            font-size: .8rem;
+        }
+    #open_chat_left{
+        height: 100%;
+        display: flex;
+        align-items: center;
+
     }
 
     /* visualizzazione chat  */
     #visual_open_chat{
         width: 100%;
-        height: 85%;
+        height: 80%;
         background-image: url(../img/whatzapp.jpg);
     }
 
     /* sezione invio messaggi  */
     #send_message{
         width: 100%;
-        height: 5%;
+        height: 10%;
         /* debug */
         background-color: darkslategrey;
     }
