--- a/css/style.css
+++ b/css/style.css
@@ -212,16 +212,6 @@ body{
             background-color: white;
 
         }
-        /* .messaggi{
-            width: 250px;
-            padding: 10px;
-            border-radius: 10px;
-            margin-bottom: 20px;
-        }
-        .messaggi.inviati{
-        }
-        .messaggi.ricevuti{
-        } */
         .data_invio{
             text-align: end;
             font-size: .7rem;
@@ -231,6 +221,19 @@ body{
     #send_message{
         width: 100%;
         height: 10%;
-        /* debug */
-        background-color: darkslategrey;
+        background-color: rgb(241, 235, 226);
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
     }
+        #send_message_input{
+            height: 80%;
+            width: 80%;
+            padding-left: 20px;
+            border-style: none;
+            border-radius: 10px;
+        }
+        .icon_message{
+            font-size: 25px;
+            color: rgba(0, 0, 0, 0.589);
+        }
