--- a/css/style.css
+++ b/css/style.css
@@ -237,3 +237,11 @@ body{
             font-size: 25px;
             color: rgba(0, 0, 0, 0.589);
         }
+
+
+
+
+/* hover  */
+#container_chat .chat:hover{
+    background-color:rgba(0, 0, 0, 0.068); ;
+}
