--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -275,6 +275,7 @@ body{
 
 /* hover  */
 #container_chat .chat:hover{
-    background-color:rgba(0, 0, 0, 0.068); ;
+    background-color:rgba(0, 0, 0, 0.068);
+    cursor: pointer;
 }
 
