--- a/css/style.css
+++ b/css/style.css
@@ -281,6 +281,7 @@ body{
 
 /* hover  */
 #container_chat .chat:hover{
-    background-color:rgba(0, 0, 0, 0.068); ;
+    background-color:rgba(0, 0, 0, 0.068);
+    cursor: pointer;
 }
 
